Update setup.md